# minifs

./: .gitignore  CMakeLists.txt  README.md
include/: DirectoryEntry.h  Inode.h  SuperBlock.h  allocator.h  dir.h  disk.h  err.h  fs.h  inode.h  iodisk.h  logging.h  path.h  super.h
include/on-disk/: dirent.h  inode.h  super.h
src/: allocator.c  dir.c  disk.c  err.c  fs.c  inode.c  iodisk.c  logging.c  path.c  super.c
